# WEFT

./: .gitignore  AGENTS.md  Cargo.toml  README.md  download_fonts.sh  generate.cjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  task-6-overflow-invariant.txt  tsconfig.json
.github/workflows/: deploy-weft-web.yml
.playwright-mcp/: page-2026-04-22T02-14-27-378Z.yml  page-2026-04-22T02-16-36-296Z.yml  page-2026-04-22T02-18-19-498Z.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: f2-code-quality.txt  f3-manual-qa.txt  f4-scope-fidelity.txt  task-1-enclave-pull.txt  task-1-no-coop-headers.txt  task-10-attacker-no-plaintext.html  task-10-threshold-demo.txt  task-12-disclosure-typecheck.txt  task-13-cleanup.txt  task-14-native-parity.txt  task-14-wasm-size.txt  task-15-below-threshold.txt  task-15-threshold-parity.txt  task-16-asset-size.txt  task-2-build-output.txt  task-23-parity-report.json  task-26-bundle.html  task-26-perf-report.json  task-29-axe-report.json  task-3-workspace-layout.txt  task-4-forge-build.txt  task-5-rust-tests.txt  task-7-fixture-coverage.txt  task-7-fixtures-deterministic.txt  task-8-mock-roundtrip.txt  task-8-telemetry.txt
.sisyphus/notepads/weft-web-app-demo/: decisions.md  learnings.md
.sisyphus/plans/: t131072-migration.md  weft-web-app-demo.md
client/: package.json
client/src/: constants.ts  encrypt.ts  index.ts  submit.ts
client/tests/: encrypt.test.ts
contracts/: FLAggregator.sol
contracts/test/: FLAggregator.t.sol
coordinator/: package.json
coordinator/src/: index.ts  model.ts  round.ts  weft-client.d.ts
examples/weft-web/: .eslintrc.cjs  .gitignore  README.md  package.json  playwright.a11y.config.ts  playwright.config.ts  playwright.parity.config.ts  playwright.perf.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
examples/weft-web/crates/fhe-wasm/: Cargo.toml
examples/weft-web/crates/fhe-wasm/fixtures/: README.md
examples/weft-web/crates/fhe-wasm/fixtures/cases/: case-01-single-zero.json  case-02-single-max-positive.json  case-03-single-max-negative.json  case-04-two-clients-cancel.json  case-05-large-coeffs.json  case-06-alternating-signs.json  case-07-near-overflow-boundary.json  case-08-single-chunk-16.json  case-09-multi-client-16.json  case-10-repeated-values.json  case-11-ascending.json  case-12-five-clients-mixed.json  chunk-boundary-8192.json  chunk-boundary-8193.json  single-encrypt-decrypt.json  sum-n10.json  sum-n2.json  sum-n3.json  sum-n5.json  threshold-3-of-5-negative.json  threshold-3-of-5-zero.json  threshold-3-of-5.json
examples/weft-web/crates/fhe-wasm/src/: common.rs  lib.rs  threshold.rs
examples/weft-web/crates/fhe-wasm/src/bfv/: mod.rs
examples/weft-web/docs/: architecture.md  honest-framing.md
examples/weft-web/spikes/fhe-wasm-spike/: Cargo.toml  REPORT.md  index.html  main.js  worker.js
examples/weft-web/spikes/fhe-wasm-spike/src/: lib.rs
scripts/: bitplane-prototype.ts  check-fixtures-up-to-date.sh  deploy.ts  run-round.ts
secure-process/: Cargo.toml
secure-process/examples/: threshold_demo.rs
secure-process/src/: constants.rs  lib.rs  main.rs
secure-process/tests/: integration.rs
(+70 files in other folders)
