[package]
name = "fhe-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fixture-gen"
path = "src/bin/fixture-gen.rs"

[dependencies]
e3-fhe-params = { path = "vendor/e3-fhe-params" }
fhe = { path = "vendor/fhe-rs/crates/fhe" }
fhe-traits = { path = "vendor/fhe-rs/crates/fhe-traits" }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.95"
ndarray = "0.15.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.99"
