[package]
name = "fhe-wasm-spike"
version = "0.1.0"
edition = "2021"

[workspace]

[workspace.package]
authors = ["Tancrède Lepoint", "Vele Tosevski", "Nathan Ginnever"]
documentation = "https://fhe.rs"
edition = "2021"
repository = "https://github.com/tlepoint/fhe.rs"
version = "0.1.0-beta.7"
license-file = "vendor/fhe-rs/LICENSE"
rust-version = "1.73"

[workspace.dependencies]
console = "0.15.7"
criterion = "0.5.1"
doc-comment = "0.3.3"
ethnum = "1.5.0"
indicatif = "0.17.7"
itertools = "0.12.0"
ndarray = "0.15.6"
num-bigint = "0.4.4"
num-bigint-dig = "0.8.4"
num-traits = "0.2.17"
prime_factorization = "1.0.5"
proptest = "1.4.0"
prost = "0.12.3"
prost-build = "0.12.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.0"
sha2 = "0.10.8"
thiserror = "1.0.50"
zeroize = "1.7.0"
zeroize_derive = "1.4.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
e3-fhe-params = { path = "vendor/e3-fhe-params" }
fhe = { path = "vendor/fhe-rs/crates/fhe" }
fhe-traits = { path = "vendor/fhe-rs/crates/fhe-traits" }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.95"
rand = "0.8.5"
wasm-bindgen = "0.2.99"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
